<resources>
    <string name="app_name">CABCA-App</string>
    <string name="welcome">¡Bienvenido a CABCA Security!</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registrer">Registrarse</string>
    <string name="regist">Registrar</string>
    <string name="main">Página principal</string>
    <string name="mainRegistrer">Página de Registro</string>
    <string name="mainCamara">Cámaras</string>
    <string name="mainChat">Página de Chat</string>
    <string name="mainEmergencia">Página de Boton de Emergencia</string>
    <string name="mainQR">Página de QR</string>
    <string name="botonCamaras">Función camaras</string>
    <string name="botonChat">Función chat anonimo</string>
    <string name="botonEmergencia">Función boton de emergencia</string>
    <string name="botonQR">Función acceso QR</string>
    <string name="logoMain">Logo principal</string>
    <string name="correo">Correo electronico:</string>
    <string name="pass">Contraseña:</string>
    <string name="mainLogin">Iniciar Sesión</string>
    <string name="mainRegist">Registro</string>
    <string name="nom">Nombre completo:</string>
    <string name="direc">Dirección</string>
    <string name="calle">Calle:</string>
    <string name="numero">Número:</string>
    <string name="celular">Número de celular:</string>
    <string name="passConf">Confirmar contraseña:</string>
    <string name="add">Añadir</string>
    <string name="addDevice">Agregar dispositivo</string>
    <string name="search">Buscar dispositivo</string>
    <string name="accept">Aceptar</string>
    <string name="chatGeneral">Chat general</string>
    <string name="chatIndv">Dirección</string>
    <string name="send">Enviar</string>
    <string name="write">Escribir</string>
    <string name="message">Mensaje</string>
    <string name="logoCont">Logo contacto</string>
    <string name="qr">QR</string>
    <string name="reload">Recargar</string>
    <string name="reload2">Generar nuevo QR</string>
    <string name="share">Compartir</string>
    <string name="share2">Compartir QR</string>
    <string name="leerQR">Lector QR</string>
    <string name="alert">Alarmas</string>
    <string name="alertLow">Alerta Baja</string>
    <string name="alertContact">Contacto registrado</string>
    <string name="iconAlert">Icono de alerta</string>
    <string name="signOut">Cerrar Sesión</string>
    <string name="contin">Continuar</string>
    <string name="verific">Verificar correo</string>
    <string name="contact">Contactos</string>
    <string name="datoHint">Datos de la visita</string>
    <string name="verHint">Se ha enviado un correo electronico. Por favor verifique su correo entrando a la liga. Presiona el boton Continuar despues de verificar el correo.</string>
</resources>